--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "year-one-challenge",
+  "name": "shoppies-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
