--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.19.0",
     "express": "^4.16.1",
+    "font-awesome": "^4.7.0",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "react": "^16.8.6",
